crates/swc_ecma_parser/tests/test262-error-references/fail/e6559958e6954318.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/e6559958e6954318.js:1:10
  |
1 | for (let x = 1 of y);
  |          ^

